# compare-lightrag-variants

./: .cwf-config.yaml  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  AGENTIC_RAG_ARCHITECTURE_NOTE.md  EDGEQUAKE_QUERY_PIPELINE.md  LIGHTRAG_QUERY_PIPELINE.md  RAG-Anything-Memory-and-Disk-Analysis.md  README.md  aperag_deep_dive.md  hybrid_search_design.md  ingestion_pipeline_comparison.md  lychee.toml  query_pipeline_comparison.md
RAG-Anything/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  env.example  pyproject.toml  requirements.txt  setup.py
RAG-Anything/.github/: pull_request_template.md
RAG-Anything/.github/workflows/: linting.yaml  pypi-publish.yml
RAG-Anything/docs/: batch_processing.md  context_aware_processing.md  enhanced_markdown.md  offline_setup.md  vllm_integration.md
RAG-Anything/examples/: batch_dry_run_example.py  batch_processing_example.py  enhanced_markdown_example.py  image_format_test.py  insert_content_list_example.py  lmstudio_integration_example.py  modalprocessors_example.py  office_document_test.py  raganything_example.py  text_format_test.py  vllm_integration_example.py
RAG-Anything/raganything/: __init__.py  base.py  batch.py  batch_parser.py  config.py  enhanced_markdown.py  modalprocessors.py  parser.py  processor.py  prompt.py  query.py  raganything.py  utils.py
RAG-Anything/scripts/: create_tiktoken_cache.py
RAG-Anything/tests/: testpaddleocr_parser.py  testparser_kwargs.py  testparser_wiring.py
edgequake/edgequake/: .dockerignore  Cargo.toml  README.md  build.rs  models.toml  validation_report.json
edgequake/edgequake/.cargo/: config.toml
edgequake/edgequake/.sqlx/: query-0ea4c7cffefce933cda7a0ef4b5ca131b5b8de399c316663a67f2cecd8151c6a.json  query-2f0fc224634d066bb2b66a088fa8d39511bd1c36e794861c8d829f7436a9972d.json  query-34510c5206d36e24b6ee4d788785f4919d407c9b1171f55af4b4354d5be9117c.json  query-5cfbe94a15cb4b511ace5527dd9c258294f7e6d1b535b695f96db0b1f8fcbaa6.json  query-6e304ce31fa848c39c44739622910f3cb55c58a839524670146877009967f7ec.json  query-9a481d22e86299e1d15bffa42a14f8fc54041a1543a9eb027d4ae4617290c3ff.json  query-9e9a21d21e2a3cda0461a16a6de1307c8ba67b0525837378a32f386878dc118d.json  query-a0066207305e3c214535ab4ffac45fcbcffdf198f612035391aee67fc0276205.json  query-c5d387655716bbc4fa9f7348319425f296b5eca3ccd94d46ffb421fd911df9c9.json  query-d2cdb1e778f6dc8e899568a739a9871366dde5d90d557be3b2f605e891d27bc2.json  query-dca426252d0870e2123a3483c3a9b0356584ddc0e7a5b49fc78697d42709f769.json  query-e9ca9dd6aa4772045719616e49d0a0cdedbd87d58b5b4a2ecb6883b89d58bff2.json  query-f9a8c362e5ab02385fe053fc824ae70607d0715bce012883267e57343aed2cb1.json
edgequake/edgequake/benches/: BASELINES.md  README.md  chunking_bench.rs  graph_performance.rs  query_bench.rs  storage_bench.rs
edgequake/edgequake/crates/edgequake-api/: Cargo.toml  build.rs
edgequake/edgequake/crates/edgequake-audit/: Cargo.toml
edgequake/edgequake/crates/edgequake-auth/: Cargo.toml
edgequake/edgequake/crates/edgequake-core/: Cargo.toml
edgequake/edgequake/crates/edgequake-pipeline/: Cargo.toml
edgequake/edgequake/crates/edgequake-query/: Cargo.toml
edgequake/edgequake/crates/edgequake-rate-limiter/: Cargo.toml
edgequake/edgequake/crates/edgequake-storage/: Cargo.toml
edgequake/edgequake/crates/edgequake-tasks/: Cargo.toml
edgequake/edgequake/docker/: Dockerfile  Dockerfile.frontend  Dockerfile.postgres  README.md  docker-compose.test.yml  docker-compose.yml  init-age-db.sh  init-extensions.sql  init-test-db.sh  init.sql
edgequake/edgequake/docker/migrations/: 002_add_age_vertex_indexes.sql
edgequake/edgequake/docs/: configuration.md  getting-started.md  runbook.md
edgequake/edgequake/docs/adr/: 0001-rust-for-backend.md  0002-modular-crate-architecture.md  0003-axum-web-framework.md  0004-trait-based-storage.md  0005-async-openai-integration.md  0006-graph-centric-knowledge.md  README.md
edgequake/edgequake/examples/: README.md  basic_rag.rs  graph_exploration.rs  multi_tenant.rs  production_pipeline.rs  streaming_query.rs
edgequake/edgequake/migrations/: 001_init_database.sql  002_add_tasks_table.sql  003_add_document_status_fields.sql  004_add_conversation_history_table.sql  005_add_audit_log_table.sql  006_add_is_manual_flags.sql  007_add_auth_tables.sql  008_add_multi_tenancy_tables.sql  009_add_rls_policies.sql  010_add_conversations_tables.sql  011_tenant_performance_indexes.sql  012_audit_logs_table.sql  013_add_age_graph.sql  014_add_graph_indexes.sql  015_add_fulltext_search.sql  016_workspace_metrics_history.sql  017_add_processing_substates.sql  019_add_tenant_workspace_to_tasks.sql  020_add_circuit_breaker_to_tasks.sql  021_add_failed_chunks_table.sql  022_add_pdf_documents_table.sql  023_workspace_scoped_content_hash.sql  024_fix_task_status_constraint.sql  025_add_pdf_unique_checksum.sql  026_fix_task_type_constraint.sql  MIGRATION_019_FIX.md  MIGRATION_019_VERIFICATION_REPORT.md
edgequake/edgequake/migrations/scripts/: apply_all_migrations.sql  phase1_apply_all.sql  phase2_apply_all.sql  phase3_apply_all.sql  reset_migrations.sql
edgequake/edgequake/src/: main.rs
edgequake/legacy/edgequake-pdf/: Cargo.toml  README.md  TEST_PROTOCOL.md  debug_agent_extraction.md  debug_log.txt  eval.sh  one_tool_output.md  run_tests.sh
edgequake/legacy/edgequake-pdf/benches/: extraction_bench.rs
edgequake/legacy/edgequake-pdf/docs/: ARCHITECTURE.md  EXTRACTION_ENGINE.md  PIPELINE.md  README_DOCS.md  TABLE_DETECTION.md
edgequake/legacy/edgequake-pdf/examples/: convert_pdf_full.rs  convert_sample.rs  convert_test_docs.rs  debug_chars.rs  debug_hotmess_fonts.rs  debug_hotmess_page1.rs  debug_pipeline.rs  diagnose_tables.rs  extract_agent.rs  extract_alpha.rs  extract_goyal.rs  extract_v2.rs  real_dataset_eval.rs  sota_test.rs  test_agent.rs  test_pdfium_load.rs
edgequake/legacy/edgequake-pdf/src/: bin.rs  config.rs  error.rs  extractor.rs  lib.rs  (+4 more)
edgequake/sdks/python/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
edgequake/sdks/rust/: .gitignore  Cargo.toml  README.md
(+1864 files in other folders)
