[package]
name = "edgequake-core"
description = "Core types and utilities for EdgeQuake RAG system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
pipeline = ["dep:edgequake-pipeline"]
postgres = ["edgequake-storage/postgres", "dep:sqlx"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
md5 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tiktoken-rs = { workspace = true }
edgequake-llm.workspace = true
edgequake-storage = { path = "../edgequake-storage", default-features = false }
edgequake-pipeline = { workspace = true, optional = true }
async-trait.workspace = true
lru = "0.13"
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
edgequake-query = { path = "../edgequake-query" }
tempfile = "3.10"
