[package]
name = "edgequake-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Document processing pipeline for EdgeQuake"

[dependencies]
edgequake-storage = { path = "../edgequake-storage" }
edgequake-llm = { workspace = true }

async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
futures = "0.3"
regex = "1.10"
# Unicode normalization for text sanitization (SPEC-001/Issue-9)
unicode-normalization = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
