[package]
name = "edgequake-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Query engine for EdgeQuake RAG system"

[features]
default = []
postgres = ["dep:sqlx"]

[dependencies]
edgequake-core = { path = "../edgequake-core", default-features = false }
edgequake-storage = { path = "../edgequake-storage", default-features = false }
edgequake-llm = { workspace = true }

async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures = "0.3"

# SOTA keyword extraction dependencies
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json.workspace = true
