[package]
name = "edgequake-rate-limiter"
version = "0.4.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = "0.6"

# Concurrent data structures
dashmap = "6.0"

# Time handling
tokio-util = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# HTTP types
http = "1.0"
http-body-util = "0.1"

[dev-dependencies]
tokio-test = "0.4"
